# rust-stratum-v2

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md  noise_handshake.rs  setup_connection.rs
fuzz/: Cargo.toml  README.md
nx-noise/: Cargo.toml  README.md
nx-noise/src/: lib.rs  noisesession.rs  state.rs
pool-server/: Cargo.toml  README.md
pool-server/src/: constants.rs  datadir.rs  error.rs  keys.rs  lib.rs  server.rs
src/: error.rs  internal_macros.rs  lib.rs
src/common/: messages.rs  mod.rs  types.rs
src/common_messages/: mod.rs
src/job_negotiation/: flags.rs  messages.rs  mod.rs
src/messages/: common.rs  mod.rs
src/mining/: flags.rs  messages.rs  mod.rs
src/util/: mod.rs  types.rs
stratumv2/: Cargo.toml  README.md
stratumv2-codec/: Cargo.toml
stratumv2-codec/src/: frame.rs  lib.rs
stratumv2-lib/: Cargo.toml  README.md
stratumv2-lib/benches/: mining_benchmark.rs
stratumv2-lib/nx-noise/src/: error.rs  types.rs
stratumv2-lib/src/: error.rs  frame.rs  lib.rs  parse.rs
stratumv2-lib/src/common/: channel_endpoint_changed.rs  mod.rs  protocol.rs  setup_connection.rs
stratumv2-lib/src/job_negotiation/: mod.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs
stratumv2-lib/src/macro_message/: message.rs  messages.rs  mod.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs
stratumv2-lib/src/mining/: mod.rs  new_mining_job.rs  open_extended_mining_channel.rs  open_extended_mining_channel_error.rs  open_extended_mining_channel_success.rs  open_mining_channel_error.rs  open_standard_mining_channel.rs  open_standard_mining_channel_error.rs  open_standard_mining_channel_success.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs  update_channel.rs
stratumv2-lib/src/network/: message_handler.rs  mod.rs
stratumv2-lib/src/noise/: certificate_format.rs  mod.rs  signature_noise_message.rs  signed_certificate.rs  types.rs
stratumv2-lib/src/types/: bytes.rs  error_code.rs  fixed.rs  flags.rs  message_type.rs  mod.rs  strings.rs  unix_timestamp.rs
stratumv2-messages/common/: Cargo.toml
stratumv2-messages/common/src/: channel_endpoint_changed.rs  lib.rs  setup_connection.rs
stratumv2-messages/job-negotiation/: Cargo.toml
stratumv2-messages/job-negotiation/src/: lib.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs
stratumv2-messages/mining/: Cargo.toml
stratumv2-messages/mining/src/: lib.rs  open_extended_mining_channel.rs  open_extended_mining_channel_error.rs  open_extended_mining_channel_success.rs  open_mining_channel_error.rs  open_standard_mining_channel.rs  open_standard_mining_channel_error.rs  open_standard_mining_channel_success.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs  update_channel.rs
stratumv2-messages/sdk/: Cargo.toml
stratumv2-messages/sdk/src/: error_code.rs  lib.rs  message.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_error_code.rs  setup_connection_success.rs
stratumv2-net-tokio/: Cargo.toml
stratumv2-net-tokio/src/: lib-2021.06.30-async.rs  lib-2021.06.30-sync.rs  lib-backup-latest.rs  lib-backup.rs  lib.rs
stratumv2-network/: Cargo.toml
stratumv2-network/src/: channel.rs  config.rs  error.rs  lib.rs  message_handler.rs  peer.rs
stratumv2-noise/: Cargo.toml
stratumv2-noise/nx-noise/src/: error.rs  prims.rs  state.rs  types.rs
stratumv2-noise/src/: certificate_format.rs  error.rs  lib.rs  noise_session.rs  signature_noise_message.rs  signed_certificate.rs  types.rs
stratumv2-serde/: Cargo.toml
stratumv2-serde/src/: error.rs  lib.rs
stratumv2-serde/src/types/: bytes.rs  error_code.rs  fixed.rs  flags.rs  message_type.rs  mod.rs  primitives.rs  strings.rs  unix_timestamp.rs
stratumv2/benches/: mining_benchmark.rs
stratumv2/nx-noise/src/: noisesession.rs  state.rs  types.rs
stratumv2/src/: error.rs  frame.rs  internal_macros.rs  internal_message_macros.rs  lib.rs  types.rs
stratumv2/src/codec/: deserialize.rs  frame.rs  mod.rs  parser.rs  serialize.rs
stratumv2/src/common/: channel_endpoint_changed.rs  messages.rs  mod.rs  setup_connection.rs  setup_connection_error_code.rs  types.rs
stratumv2/src/job_negotiation/: flags.rs  messages.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs
stratumv2/src/macro_message/: message.rs  setup_connection.rs  setup_connection_error.rs  setup_connection_success.rs
stratumv2/src/message/: mod.rs  parse.rs
stratumv2/src/message/types/: bytes.rs  fixed.rs  mod.rs  strings.rs
stratumv2/src/mining/: flags.rs  messages.rs  mod.rs  open_extended_mining_channel_error.rs  open_standard_mining_channel_success.rs  setup_connection.rs  setup_connection_success.rs
stratumv2/src/network/: channel.rs  channel_encryptor.rs  config.rs  connection_encryptor.rs  encryptor.rs  message_handler.rs  message_send_event.rs  mod.rs  peer.rs
stratumv2/src/noise/: certificate_format.rs  mod.rs  noise_session.rs  signature_noise_message.rs  signed_certificate.rs  types.rs
stratumv2/src/types/: bytes.rs  error_code.rs  fixed.rs  flags.rs  mod.rs  primitives.rs  strings.rs  unix_timestamp.rs
stratumv2/src/util/: channel_id.rs  mod.rs
stratumv2/tests/: functional_tests.rs
