[workspace]

members = [
    "examples",
    "stratumv2-messages/mining",
    "stratumv2-messages/job-negotiation",
    "stratumv2-messages/sdk",
    "stratumv2-messages/common",
    "stratumv2-codec",
    "stratumv2-serde",
    "stratumv2-noise",
    "stratumv2-network",
    "stratumv2-noise/nx-noise",
]
