[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
stratumv2 = { version = "0.1.0", path = "../stratumv2" }
stratumv2_lib = { version = "0.1.0", path = "../stratumv2-lib" }
rand = "0.7.3"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["full"] }

[[example]]
name = "setup_connection"
path = "setup_connection.rs"

[[example]]
name = "noise_handshake"
path = "noise_handshake.rs"
