[package]
name = "fuzz"
version = "0.1.0"
authors = ["Christopher Coverdale <chris.coverdale24@gmail.com>"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata]
cargo-fuzz = true

[features]
honggfuzz_fuzz = ["honggfuzz"]

[dependencies]
honggfuzz = { version = "0.5", optional = true }
stratumv2 = { path = "../stratumv2" }
stratumv2_lib = { path = "../stratumv2-lib" }

[workspace]
members = ["."]

[lib]
name = "stratumv2_fuzz"
