[package]
name = "pool-server"
version = "0.1.0"
authors = [
    "Christopher Coverdale <chris.coverdale24@gmail.com>",
    "Christopher Patton <chpatton013@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stratumv2 = { version = "0.1.0", path = "../stratumv2" }
tokio = { version = "1.0.0", features = ["full"] }
clap = "3.0.0-beta.2"
