[package]
name = "stratumv2_lib"
version = "0.1.0"
authors = [
    "Christopher Coverdale <chris.coverdale24@gmail.com>",
    "Christopher Patton <chpatton013@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noiseexplorer_nx = { version = "1.0.2", path = "./nx-noise" }
rand = "0.7.3"
bitflags = "1.2.1"
thiserror = "1.0.24"
bitcoin = "0.26.0"

[dependencies.ed25519-dalek]
version = "1"
