[package]
name = "stratumv2-net-tokio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = [ "io-util", "macros", "rt", "sync", "net", "time" ] }
stratumv2_lib = { version = "0.1.0", path = "../stratumv2-lib" }

[dev-dependencies]
tokio-test = "*"
