[package]
name = "stratumv2"
version = "0.1.0"
authors = ["Christopher Coverdale <chris.coverdale24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
snow = "0.7.2"

[dependencies.ed25519-dalek]
version = "1"
