[package]
name = "stratumv2-mining"
version = "0.1.0"
authors = [
    "Christopher Coverdale <chris.coverdale24@gmail.com>",
    "Christopher Patton <chpatton013@gmail.com>",
]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
thiserror = "1.0.24"
stratumv2-serde = { version = "0.1.0", path = "../../stratumv2-serde" }
stratumv2-messages-sdk = { version = "0.1.0", path = "../sdk" }
stratumv2-codec = { version = "0.1.0", path = "../../stratumv2-codec" }
